@@ -1,3 +1,4 @@
+	* make the token limit when parsing metadata from magnet files configurable
 	* fix issue with stalled pieces on disk full errors
 	* fix missing python binding for file_progress_flags
 	* fix torrent_file_with_hashes() to fail when we don't have the piece layers
